# lab1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose-ci.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini  readme.md
.github/workflows/: action.yaml
main/: admin.py  models.py  serializers.py  urls.py  views.py
main/fixtures/: calendar.json  teams.json  tituls.json  users.json
main/migrations/: 0001_initial.py  0002_calendar_user_id_team_user_id_title_user_id.py  0002_remove_calendar_teams_remove_team_tituls_and_more.py  0002_team_games_count.py  0003_alter_team_games_count.py  0003_rename_user_id_calendar_user_and_more.py
static/css/: base.css  chat.css  chats.css  game.css  game_create.css  games.css  login.css  main.css  register.css  select_chat.css  table.css  team.css  teams.css  title.css  titles.css
static/js/: base.js  chat.js  chats.js  game.js  game_create.js  games.js  main.js  register.js  select_chat.js  team.js  team_create.js  teams.js  title.js  title_create.js  titles.js
templates/: base.html  chat.html  chats.html  game.html  game_create.html  games.html  login.html  main.html  register.html  select_chat.html  table.html  team.html  team_create.html  teams.html  title.html  title_create.html  titles.html  tournament_table.html
templates/games/: game.html  game_create.html  (+1 more)
tests/: conftest.py  games_test.py
tournament/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
users/: consumers.py  forms.py  models.py  routets.py  routing.py  serializers.py  urls.py  views.py
(+12 files in other folders)
