[tool.poetry]
name = "tournament_site"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pre-commit = "^3.0.4"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
django-extensions = "^3.2.1"
djangorestframework = "^3.14.0"
pytest-django = "^4.5.2"
channels = "^4.0.0"
channels-redis = "^4.0.0"
django-cors-headers = "^3.13.0"
uvicorn = "^0.20.0"
websockets = "^10.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
